--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,9 @@ dependencies:
   flutter_webrtc: ^0.9.41
   cloud_firestore: ^4.9.1
   firebase_core: ^2.15.1
-  sdp_transform: ^0.3.2
   firebase_auth: ^4.9.0
-  flutter_gif: ^0.0.4
+  google_sign_in: ^6.1.5
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
